archive/claim-cards/v275/wittichen.md
# CLAIM CARD — wittichen  (v275, seed 42, 220 steps)

**Anchor:** Kloster Wittichen, Schwarzwald (Black Forest), Baden-Württemberg, Germany — the classic Bi-Co-Ni-Ag-As-(Ba) five-element vein district; cobalt-pigment + silver mining boom 1730s–40s around the convent. Sophia and Johann-Georg veins.
**Deposit:** A five-element vein in granite basement: hot, saline, SULFUR-STARVED brine carries Bi + Co + Ni + Ag + As. S ~3 ppm is load-bearing — bismuthinite and acanthite never gate open, so the metals stay NATIVE and arsenides are the metal sinks. Hot stage grows skutterudite + nickeline rosettes; the deposit-defining REDUCING SHOCK precipitates arborescent bismuth and barite. Calcite gangue and cobalt-bearing aragonite remain documented targets rather than executed products in SIM 272. A post-vein epilogue partly drains the cavity so vadose wall voxels oxidize Co arsenides for erythrite while the submerged floor preserves the hypogene suite.
**Initial:** 340 °C, 0.9 kbar, wall=tabular
**Model digest:** Pfluid:kbar-0.001..4.4|Ksp-pressure:SUPCRTBL-delta-logK-reaction-grid+density-mask+continuous-temperature-edge-hold+no-pressure-extrapolation-v2|sulfate-Ksp:USGS-PHREEQC-wateq4f-analytic5+explicit-temperature-envelope-v1|carbonate-rate:PWP-omega2over3-raw+production-positive-affinity-series-resistance-Aover1plusA+molarMgCa+pKwTP-hydroxycarbonates-v2|chemistry-evidence:ppm-mgkg-solvent+carbonate-equivalent-mass-labels-v1|SCI02-locality:PHREEQC-SUPCRTBL-anhydrite-classification+ledgered-carbonate-pulses-v1|aragonite-selector:hard-molarMgCa>=1.1-OR-explicit-open-spring+shallowP<=0.10kbar+40..100C-OR-Co5e-4..<1e-2molal+CoCa<0.6+20..30C-OR-highPstable-v5|aragonite-Sr:Wassenburg16-DSr1.38+/-0.53+accepted-zone-booked-return-v1|aragonite-Co:Barber75+GonzalezLopez18+equilibrium-and-effective-booked-DCo0.1+accepted-zone-booked-return-v2|CaCO3:Hacker05-negative-linear+/-1kbar|Prock:Pattison92-AndSil-16+/-3barC|stress:instant-resolved-shear-stable-grain-v2|event-fluid:locality-authored-material-transform+canonical-catalog-deep-match+owner-bound-MVT-90sulfide-30sulfate+receipted-exact-pore-fluid-export-replacement+atomic-heat-only-default-v4|elmwood-barite:explicit-sulfate-floor+receipted-Ba-hiatus-replacement+causal-next-pulse-masked-layers+terminal-clay-rind-v1|carbonate-boundary:PB82-dilute+DIC+reducedAlk+ideal-headspace+open-ledger+atomic-recharge+titration+accepted-zone-receipts+bulk-guard+equal-volume-mixed+solved-pCO2-uncertainty-v3|sphalerite-Ge:Belissont-Kd1708-cap22000-mass+dissolution-v2|gypsum-aw:ChirifeResnik84-NaCl-proxy-v1|silica-phase:Fournier-amorphous+chalcedony+quartz-Ostwald+reactive-pool+Manning94-grid-bounded-pressure+booked-transition+chemistry-competition-v5|surface-growth:all-cell-invalidated-exact-triangle-area+connected-patch+mass-booked-thickness+exact-shared-triangle-stratigraphy+executed-raycast+LOD-invariant-relief-v4|surface-anchor:position+void-normal+authenticated-triangle-barycentric+immutable-source-snapshot+constructor-fixed-production-provider+field-position-neighborhood-remap+separate-nearest-WallMesh-chemistry-projection+physical-host-anchor-inheritance+derived-live-remap-cache+exact-origin-edge-geodesic-occupancy+physical-normal-architecture-placement+source-qualified-fabrics+provider-timeline-replay+historical-helper-cursor+renderer-authority-lock+replay-shape-tessellation-fail-closed-v7|cavity-shape:seeded-exact-bubble-union+immutable-authored-radial-masks+pole-regular-sin2phi-cos2theta+analytic-pole-caps+digest-ledger-star-shaped-cartesian-production-v4|cavity-authority:default-before-water-chemistry-nucleation+fixed48-world-frame+zero-isovalue+Freudenthal-closed-manifold+signed-spacingOver4096-near-zero-scalar-floor+critical-contact-rejection+exact-volume-transaction+subresolution-chemistry-withheld+atomic-preflight+64-convergence+field-agreement+exact-contract-cache+semantic-startup-receipt+authenticated-replay-v4|water-boundary:mm-above-authenticated-current-floor+legacy-ring-to-authenticated-span-conversion+actual-vertex-chemistry-bands+topology-independent-wall-tint+field-clipped-interface+append-only-historical-appearance-ledger-v1|tiger-eye:HeaneyFisher03-antitaxial-crack-seal+GutzmerBeukesCairncross04-e44-surficial-alteration+BIF-physics-host+booked-NaFeSi-substrate+zeroSiO2-cumulative-O2closed-overprint+HF-only+local-tiger-iron+enum-fail-closed-v2|Mn-oxide-phase:birnessite-layer+Ba-romanechite-2x3+booked-birnessite-to-Mg-todorokite-3x3-at95-200C+pyrolusite-endmember-v2|CaSO4-phase:Hardie67-aw+P14.7Ckbar+single-evaluator+mass-balanced-replacement-v1|sulfur-ledger:sulfide+sulfate+elemental+declaration-driven-spatial+valence-specific-supersaturation+authenticated-midrun-activation+phase-resolved-testimony-v5|native-S-oxidation:production-open+O2limited-closed+diagnostic-H-v1|sulphur-bank-HgS:zoned-association-not-S0-substrate-v1|wall-dissolution:atomic-preattack-local-pH+fractional-full-surface-shielding+geodesic-feeder+USGS1248-26C-molar-volume+reported-uncertainty-per1kg+exact-Cartesian-Freudenthal-volume-ledger+validated-depth-closure+capacity-derived-equivalent-diameter+atomic-prerun-creative-reauthoring-v4|solid-occupancy:all-nondissolved+positive-only-size-cap+growth-shadowing-not-chemical-seal+dissolution-remains-local-mass-balanced+zone-integrated-volume+chalcanthite-local-CuSO4-decay-v3|cavity-seal:repeatable-transition+accepted-dissolution-immediate-below95pct-rearm+same-or-later-refill-testimony-v2|sicily-SDAOM:methane-1C1S+whole-scenario-carbon-ledger-v2|calcite-Mn:manganocalcite-excess<1.2-v1|HMC-solid-solution:Mucci87-seawater-DMgT+MucciMorse83-MgCa7.5..20-seawater25C+unknown-outside+BP89-metastable-miscibility+25C-activity-calibration+bounded-RT-extrapolation+omegaGT1-locality-licensed-heterogeneous-wall-approximation+zone-formula+dynamic-competition-stoichiometry+booked-return-v5|CuZn-carbonates:Alwan80+Kaluza24-observer-only-v1|growth-budget:calibrated-axial-mmolkg+zone-formula-ratio+booked-return-v7|dissolution:LIFO-booked-axial-inventory+5um-floor-v2|dissolution-overprint:flat-face-rate+coupled-return-dGgate+render-geometry+enforced-booked-return+replay-healing-v3|fluorite-etch:Godinho12-{100}-21C-pH3.6-I0.05-468h+Cama-dG<=-7+NaCl-closed-analogue+250x-schematic-pores+growth-shadow-access+authenticated-current-enclosure-withhold-v4|carbonate-boundary:conserved-only+explicit-initial-DIC-alk+fail-closed-open-reservoir+sabkha-recharge+zero-charge+truthful-reverse-flow-v3|engine-fluid:transactional-staged-crystal+actual-supplement+Au-ledger-v3|beryl:K36-postHF-recovery-v1|halite:vadose-propensity0.8-v1|borax-tincalconite:pure60.8C+halite-sat39.6C-oneway-v1|competition:accepted-axial-timescale+actual-zone-formula+residual-round-redistribution+single-evaluation-full-fill-negative-v5|thermal-field:LTE-voxel+geometry-weighted-finite-volume-k<=1/6+order-independent-sources+rock-boundary+per-voxel-one-way-authored-ambient+pause-retain+local-nucleation-growth-morphology+replay-v3|diagnosis:production-nucleator+local-max-context+causal-supersat+calibrated-budget-v5|scenario-contracts:headline-deterministic+accessory-deterministic-with-rationale+3seed-statistical+aspirational+fail-closed-four-tier-locality-license+owner-bound-events+canonical-locality-event-deep-match+causal-event-prerequisite+valence-correct-commissioning-reconciliation-v10|bingham:RedmondEinaudi10-pulsed-hypogene+copper-history-before-gold+gold-aspirational-without-bornite+step85-exhumation+P0.001kbar+35to25C+no-reheat+supergene-malachite-v3|bisbee:Graeme-district+post-mining-inventories+alunite-statistical+jarosite-deterministic+siderite-aspirational+zero-CoNi+8-locality-exclusions+no-forced-halite-brine-v3|tsumeb:TSNB159-confirmed-gypsum-recharge+TSNB301-questionable-rhodochrosite-excluded-v1|wittichen:authored-cooling-through-step170+ambient-thermal-pulses-disabled+step170-vadose-boundary+oxidized-sulfate-does-not-sulfidize-silver-v3|weathering-epilogue:strict-normalized-schema+inclusive-bounded-window+invalid-product-block+authored-drainage+3D-vadose+S-conserved+O2-receipt+CO2-light+same-site-precursor-history-v2|cation-sinks:accepted-shell-return-only+schneeberg-zero-Zn-all-step-finite-voxel-receipt+pharmacolite-dissolved-molar-cation-proxy+48-field-consumer-audit-v2|koettigite:Ciesielczuk20-pH<3+dissolved-molar-Zn-majority-proxy+Co-solid-solution+Hill79-Ni<=5molpct+Bowell14-Tsumeb-third-zone-only-v3|roughton-gill:Bridges11-quartz-carbonate-primary+carbonate-buffered-malachite-cerussite+silica-hemimorphite+step215-pyromorphite-encrusting-plumbogummite+signed-boundary-receipts-v3|run-testimony:actual-step+sample-index+nucleation+positive-layer-formula+returned-dissolution-inventory+habit-extent+hydration-transfer+competition-allocation+solid-solution+CDR+enclosure-liberation-lifecycle+controlled-production-engine-witness+solid-state-transformation+null-confining-pressure-v6|locality-boundary:authored-pH-buffer+heat-only-ambient-pulse+creative-exact-authority-v1|crystal-size:individual-record-vs-aggregate-habit+celestine46cm+unresolved-wulfenite-v1|replacement:actual-parent-loss+matching-route-trigger+outline-inheritance-v1|enclosure:positive-nonphantom-solid-guest+same-step-net-positive-host-material+exact-substrate-contact-or-0.5mm-physical-lateral-front+substrate-first-deterministic-host+physical-solid-geometric-reach+shared-chemistry-current-topology-receipt-strict-chronological-lifecycle-authority+authenticated-same-crystal-host-phase-lineage-and-trigger-receipts+slowing-guest+physical-solid-threshold-partial-retreat-liberation+source-specific-front-film-reversal+replay-authenticated-lifecycle-v10|transformation-reactivity:product-only-acid-retreat+LIFO-booked-return+explicit-light-realgar+authenticated-controlled-product-witness-v2|agent-runtime:explicit-sulfur-valence+ambiguous-S-rejected+owner-bound-MVT-90sulfide-30sulfate+narrow-parity-v1|deccan:Savda-Nashik-silica+scolecite-mesolite+heulandite-stilbite+apophyllite-v2|transition-locality-exclusion:target-gated-v1|evidence-binding:exact-browser-dist-runtime-data+producer-contracts+timestamp-free-strips+mechanism-witness-artifact+aggregate-artifact-sha256-v3|save-identity:version+model+scenario+voxel-fluids+dedicated-rng+nucleation-shared-seed+movement-state+growth-shadow-state+water-height+full-zone-ledgers+enclosure-lifecycle+transformation-histories-and-exposure-counters+cavity-evolution-chain+wall-depths+replay-cursor-fail-closed-v7
**Scenario spec hash:** af8b686c71ac175742f1f5ecbc8e1b84b2a58a0caf1d3682022c16b52a15d9f7
**Archived strip SHA-256:** 83eb5818e4e76d675b2b69133e6feab346474ece656c194462a58a2c29d0d361

## Model boundary: calibrated growth budget
  - Kind: calibrated stoichiometric axial-growth budget proxy
  - Basis: 0.00008 mmol formula/kg solvent per accepted axial micrometre
  - Preserves: formula mole ratios and exact closure of booked inventory on dissolution
  - Limitation: not physical solid mass or volume; demand is independent of crystal size, habit, density, and rendered shell volume

## Expectation contract
**Deterministic headline (8):** skutterudite, nickeline, safflorite, native_bismuth, native_arsenic, native_silver, barite, erythrite
**Deterministic accessories (5):** annabergite — A classic Ni-arsenate bloom in the oxidized five-element-vein assemblage.; chalcedony — A subordinate low-temperature silica lining during the post-vein weathering interval.; pharmacolite — A plausible hydrated Ca arsenate accessory in the oxidized arsenide-vein epilogue.; haidingerite — A plausible less-hydrated Ca arsenate product late in the weathering sequence.; anhydrite — The corrected PHREEQC analytical K(T) path reproducibly resolves a trace Ca-sulfate accessory from the late sulfate-bearing vein fluid across all three evidence seeds. It remains subordinate to documented barite and is not presented as a defining Wittichen specimen phase.
**Statistical (0):** (none)
**Aspirational (5):** proustite — Ruby silver is documented in five-element vein districts, but this authored S-starved trajectory contains no independently sourced reduced-sulfur pulse sufficient to form it.; acanthite — Acanthite-coated silver is geologically possible, but oxidized meteoric sulfate cannot directly sulfidize native silver; no such conversion is claimed without an authored sulfate-reduction pathway.; realgar — Realgar is a plausible district accessory, but the valence-correct trajectory does not deliver a reduced-sulfur As-sulfide window.; calcite — Documented five-element-vein gangue remains locality-licensed, but no discrete free-grown calcite appears in the three SIM 272 commissioned seeds.; aragonite — A cobalt-bearing carbonate remains possible in the vadose epilogue, but no discrete aragonite appears in the three SIM 272 commissioned seeds.
**Locality exclusions (0):** (none)

**Cited sources:**
  - Kissin S.A. 1992, Canadian Mineralogist 30 — Five-element (Ni-Co-As-Ag-Bi) veins: the deposit-class review
  - Burisch M., Walter B.F., Gerdes A., Lanz M., Markl G. 2017, Geology 45 — Methane and the origin of five-element veins (the hydrocarbon reduction trigger)
  - Scharrer M., Kreissl S., Markl G. 2019, Ore Geology Reviews — The mineralogical variability of hydrothermal native element-arsenide associations
  - Staude S., Bons P.D., Markl G. 2012, Mineralium Deposita 47 — Schwarzwald hydrothermal veins: fluid inclusion record, 20-26 wt% NaCl basement brines
  - Barber D.M., Malone P.G., Larson R.J. 1975, Chemical Geology 16:239-241, DOI 10.1016/0009-2541(75)90032-7 — Co-induced aragonite at 25°C
  - González-López J. et al. 2018, Chemical Geology 482:91-100, DOI 10.1016/j.chemgeo.2018.02.003 — Co/Ca-controlled amorphous-to-aragonite pathway
  - Brazier J.-M. & Mavromatis V. 2022, Chemical Geology 600:120863, DOI 10.1016/j.chemgeo.2022.120863 — Co partitioning into aragonite at 25°C
  - Markl G. et al. 2016 — Cobalt (Ontario) arsenide zoning, X_As 0.96-0.99 (the skutterudite engine's anchor citation)
  - Kloster Wittichen district history — cobalt-blue pigment + silver boom, 1730s-1740s (shape_seed 1736)

**Claim-level citations:**
  - (none authored)

## Paragenetic order as grown (13 species)
| # | mineral | first step | nucleations | transformations | pathway |
|--|--|--|--|--|--|
| 1 | skutterudite | 1 | 2 | 0 | nucleation |
| 2 | nickeline | 4 | 4 | 0 | nucleation |
| 3 | native_arsenic | 5 | 4 | 0 | nucleation |
| 4 | safflorite | 35 | 2 | 0 | nucleation |
| 5 | native_silver | 71 | 4 | 0 | nucleation |
| 6 | native_bismuth | 77 | 3 | 0 | nucleation |
| 7 | anhydrite | 138 | 7 | 0 | nucleation |
| 8 | barite | 141 | 6 | 0 | nucleation |
| 9 | annabergite | 170 | 1 | 0 | nucleation |
| 10 | chalcedony | 170 | 4 | 0 | nucleation |
| 11 | erythrite | 171 | 1 | 0 | nucleation |
| 12 | pharmacolite | 172 | 5 | 0 | nucleation |
| 13 | haidingerite | 201 | 0 | 3 | pharmacolite -> haidingerite |

**Surprises (present but absent from all authored expectation tiers):** (none)
**Deterministic no-shows:** (none)
**Statistical no-shows (non-failing):** (none)
**Aspirational no-shows (non-failing):** proustite, acanthite, realgar, calcite, aragonite
**Excluded-locality appearances (failing):** (none)

## Environment trajectory (first → last, [min,max])
  - T: 339.98035416242624 → 25 °C  [25, 339.98035416242624] (raw_simulation_state)
  - pH: 6.2 → 7.300000000000001   [6.2, 7.300000000000001] (raw_simulation_state)
  - Eh: -19.98891357421875 → 322.1090020413224 mV  [-280.92380224446623, 322.1090020413224] (raw_simulation_state)
  - salinity: 24 → 24 psu  [24, 24] (raw_simulation_state)
  - O2: 0.16597563761020587 → 1.8 ppm (mg/kg solvent)  [0.0024590195274729384, 1.8] (raw_simulation_state)
  - concentration: 1 → 1.2 ×  [1, 1.2] (raw_simulation_state)

## Saturation drivers
  - SI_calcite: -4.283 → 0.126  [-4.283, 0.126]
  - SI_aragonite: -4.346 → -0.063  [-4.346, -0.063]
  - SI_dolomite: -8 → -0.756  [-8, -0.756]
  - SI_HMC: -3.402 → -0.063  [-3.465, 0.567]
  - SI_siderite: -2.709 → 0.756  [-2.709, 0.882]
  - SI_selenite: -8 → -1.134  [-8, -1.134]
  - SI_anhydrite: -8 → -1.323  [-8, 0.378]
  - SI_barite: -8 → 3.024  [-8, 3.024]
  - SI_celestine: -8 → -1.449  [-8, 1.197]

## Authored pressure/stress/phase context (claim, not run testimony)
  - Fluid pressure: 0.9 kbar — cavity-fluid pressure; never silently substituted for rock pressure or differential stress
  - Rock pressure: unspecified kbar — unspecified; metamorphic phase field is reported unconstrained
  - Calcite/aragonite boundary: 3.042 kbar; secure aragonite=false
  - Al2SiO5: unconstrained (nominal n/a) — Rock/confining pressure is not specified; fluid pressure cannot substitute for it.
  - Gypsum/anhydrite pure-water boundary: 71.23 °C; initial a_w=0.987 ±0.020 (temperature-extrapolation)
  - Ksp pressure rule: reaction-specific SUPCRTBL delta-logK grid; bilinear only inside density and per-reaction temperature masks; no constant reaction-volume proxy
    - calcite: temperature-clamped-to-envelope; active=true; ΔlogK=0.77307182; Requested 340 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - aragonite: temperature-clamped-to-envelope; active=true; ΔlogK=0.738638304; Requested 340 C is outside this reaction's 10-90 C fitted envelope; the nearest 90 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - dolomite: temperature-clamped-to-envelope; active=true; ΔlogK=2.322775746; Requested 340 C is outside this reaction's 10-250 C fitted envelope; the nearest 250 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - siderite: temperature-clamped-to-envelope; active=true; ΔlogK=0.902429076; Requested 340 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - rhodochrosite: temperature-clamped-to-envelope; active=true; ΔlogK=0.86392492; Requested 340 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - anhydrite: temperature-clamped-to-envelope; active=true; ΔlogK=1.658096716; Requested 340 C is outside this reaction's 10-300 C fitted envelope; the nearest 300 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - barite: temperature-clamped-to-envelope; active=true; ΔlogK=1.581897708; Requested 340 C is outside this reaction's 10-300 C fitted envelope; the nearest 300 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - celestine: temperature-clamped-to-envelope; active=true; ΔlogK=0.7284017700000001; Requested 340 C is outside this reaction's 10-200 C fitted envelope; the nearest 200 C SUPCRTBL pressure correction is held constant for a continuous, non-extrapolated boundary.
    - selenite: unsupported-reaction; active=false; ΔlogK=0; Gypsum is absent from the SUPCRTBL solid-species set; the Hardie water-activity/temperature phase selector remains active, but no Ksp pressure correction is fabricated.
  - Differential stress: no authored stress event.

## Executed pressure/stress/phase testimony (archived run)
**Source:** archived executed run state; not reconstructed from scenario definition
  - Fluid pressure: 0.9 → 0.001 kbar [0.001, 0.9], n=220
  - Rock/confining pressure: not recorded
  - Temperature: 339.98035416242624 → 25 °C [25, 339.98035416242624], n=220
  - Secure aragonite assessment: 0/220 executed steps; first={"boundary_kbar":3.041406741946914,"secure_aragonite":false}, last={"boundary_kbar":2.9888905400000003,"secure_aragonite":false}
  - Al2SiO5 executed phase counts: {"unconstrained":220}; first=unconstrained, last=unconstrained
  - Executed stress: no stress event recorded by the run.
  - Transformation step 201: pharmacolite → haidingerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":201,"from":"pharmacolite","to":"haidingerite","driver":"dry-exposure","temperature_C":25,"temperature_threshold_C":80,"water_state":"vadose","water_activity":0.9866,"concentration":1.2,"formula_amount_mmol_kg":0.3985466678078251,"hydration_water_per_formula":1,"hydration_water_released_mmol_kg":0.3985466678078251,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 207: pharmacolite → haidingerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":207,"from":"pharmacolite","to":"haidingerite","driver":"dry-exposure","temperature_C":25,"temperature_threshold_C":80,"water_state":"vadose","water_activity":0.9866,"concentration":1.2,"formula_amount_mmol_kg":0.40481791225475555,"hydration_water_per_formula":1,"hydration_water_released_mmol_kg":0.40481791225475555,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation step 216: pharmacolite → haidingerite (dry-exposure); dehydration={"schema":"dehydration-transformation-v1","step":216,"from":"pharmacolite","to":"haidingerite","driver":"dry-exposure","temperature_C":25,"temperature_threshold_C":80,"water_state":"vadose","water_activity":0.9866,"concentration":1.2,"formula_amount_mmol_kg":0.37449933592053497,"hydration_water_per_formula":1,"hydration_water_released_mmol_kg":0.37449933592053497,"water_accounting":"structural-transfer-testimony; no conserved bulk H2O inventory"}; phase-replacement=null
  - Transformation reactivity commissioning: controlled production-engine boundary; not a locality trajectory; artifact vugg-mechanism-witnesses-v1/23bade18c1f579f7afdbbe5a8a19318ab3e4ab79641548cf4359a550b1589a83.
    - haidingerite: neutral positive growth=false; acid boundary pH 4.5, control pH 4.4; etch=-0.24 µm; formula={"Ca":1,"As":1}; returned={"Ca":0.00076953600000013,"As":0.00143846399999984}; closure error={"Ca":6.9349907760862806e-15,"As":3.296841966093922e-15}.
  - Conserved carbonate boundary: not enabled for this archived run.

## Declared non-sulfur fluid-boundary transactions (archived run)
**Source:** archived declared non-sulfur fluid-boundary transactions; exact rows are authenticated by the strip SHA-256
  - Closure: 1/1 transactions; all_closed=true.
  - Step 142: closed=true; declarations=[{"kind":"addition","source":"Wittichen late carbonate-gangue fluid","fields":{"CO3":95,"Ca":160}}]; testimony=[{"field":"CO3","before":45,"after":140,"declaredAddition":95,"declaredReplacementTarget":null,"declaredDelta":95,"declaredImports":95,"declaredExports":0,"actualDelta":95,"error":0,"tolerance":1.4e-7,"closed":true},{"field":"Ca","before":250,"after":410,"declaredAddition":160,"declaredReplacementTarget":null,"declaredDelta":160,"declaredImports":160,"declaredExports":0,"actualDelta":160,"error":0,"tolerance":4.1000000000000004e-7,"closed":true}].

## Crystal enclosure receipts (archived run)
**Source:** accepted host-over-guest and later liberation events from the archived executed run
  - Step 171: erythrite #32 enclosed skutterudite #1; route=host-on-guest; host net layer=192.28234292237403 µm; distance/reach=0/12.31984863569616 mm; size ratio=3.1960381709566668; guest recent=-27.802711037632335 µm; guest core/loss/remaining=90.1627179142289/30/60.16271791422891 µm; partial loss=true.
  - Step 180: erythrite #32 enclosed safflorite #12; route=geometric-overlap; host net layer=204.56663385151157 µm; distance/reach=0/12.31984863569616 mm; size ratio=3.372241176351998; guest recent=-45 µm; guest core/loss/remaining=736.9919802284045/165/571.9919802284045 µm; partial loss=true.
  - Step 201: haidingerite #33 enclosed native_arsenic #4; route=host-on-guest; host net layer=157.29994836075764 µm; distance/reach=0/12.31984863569616 mm; size ratio=3.1075294570120984; guest recent=-37.5 µm; guest core/loss/remaining=2003.149195048296/400/1603.149195048296 µm; partial loss=true.
  - Final inclusion status: 3 current; 3 accepted and 0 liberated.

## Sulfur reservoir identity and conservation (archived run)
**Source:** archived phase-resolved sulfur ledger; exact samples are authenticated by the strip SHA-256
  - Sulfur ledger: explicit valence-resolved sulfur pools were not enabled for this scenario.

## Layer, solid-solution, competition, and habit testimony
  - Accepted layers: 3205; formula-bearing=0; solid-solution=0; binding competition=0; reactive transformation etches=0; masked horizons=0.
  - Habit crystal 1: skutterudite; massive_granular; extent=individual; forms=["massive granular (\"smaltite\" variety)"]; size authority={"extent_kind":"individual","cap_cm":9,"record_cm":4.5}; CDR=null.
  - Habit crystal 2: skutterudite; massive_granular; extent=individual; forms=["massive granular (\"smaltite\" variety)"]; size authority={"extent_kind":"individual","cap_cm":9,"record_cm":4.5}; CDR=null.
  - Habit crystal 3: nickeline; massive_granular; extent=individual; forms=["granular massive","pale copper-red metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 4: native_arsenic; massive_granular; extent=individual; forms=["granular crust","tin-white metallic mass"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 5: native_arsenic; massive_granular; extent=individual; forms=["granular crust","tin-white metallic mass"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 6: native_arsenic; massive_granular; extent=individual; forms=["granular crust","tin-white metallic mass"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 7: native_arsenic; massive_granular; extent=individual; forms=["granular crust","tin-white metallic mass"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 8: nickeline; massive_granular; extent=individual; forms=["granular massive","pale copper-red metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 9: nickeline; massive_granular; extent=individual; forms=["granular massive","pale copper-red metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 10: nickeline; massive_granular; extent=individual; forms=["granular massive","pale copper-red metallic"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 11: safflorite; pseudo_orthorhombic_prism; extent=individual; forms=["elongate [010] prisms","{101}+{310} faces, pseudo-tetragonal outline"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 12: safflorite; mantle; extent=individual; forms=["silvery thick rim on Ni-rich core","Cobalt-Ontario rosette mantle"]; size authority={"extent_kind":"individual","cap_cm":4,"record_cm":2}; CDR=null.
  - Habit crystal 13: native_silver; massive; extent=individual; forms=["hackly massive","metallic nugget"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 14: native_silver; massive; extent=individual; forms=["hackly massive","metallic nugget"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 15: native_bismuth; massive_granular; extent=individual; forms=["massive/foliated silver-white veinlet"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 16: native_silver; massive; extent=individual; forms=["hackly massive","metallic nugget"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 17: native_bismuth; massive_granular; extent=individual; forms=["massive/foliated silver-white veinlet"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 18: native_bismuth; rhombohedral_crystal; extent=individual; forms=["{0001} basal pinacoid","rhombohedral trigonal (pseudocubic)"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 19: native_silver; massive; extent=individual; forms=["hackly massive","metallic nugget"]; size authority={"extent_kind":"individual","cap_cm":30,"record_cm":15}; CDR=null.
  - Habit crystal 20: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 21: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 22: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 23: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 24: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 25: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 26: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 27: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 28: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 29: anhydrite; tabular; extent=individual; forms=["tabular crystals","three perpendicular cleavages"]; size authority={"extent_kind":"individual","cap_cm":200,"record_cm":100}; CDR=null.
  - Habit crystal 30: annabergite; co_bearing; extent=individual; forms=["pinkish-green intermediate crust"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 31: chalcedony; botryoidal_chalcedony; extent=individual; forms=["radiating fibrous spherulites","botryoidal cryptocrystalline crust"]; size authority={"extent_kind":"individual","cap_cm":100,"record_cm":50}; CDR=null.
  - Habit crystal 32: erythrite; radiating_fibrous; extent=individual; forms=["radiating fibrous sprays","stellate clusters"]; size authority={"extent_kind":"individual","cap_cm":5,"record_cm":2.5}; CDR=null.
  - Habit crystal 33: haidingerite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":0.1,"record_cm":0.05}; CDR=null.
  - Habit crystal 34: haidingerite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":0.1,"record_cm":0.05}; CDR=null.
  - Habit crystal 35: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 36: haidingerite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":0.1,"record_cm":0.05}; CDR=null.
  - Habit crystal 37: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 38: chalcedony; botryoidal_chalcedony; extent=individual; forms=["radiating fibrous spherulites","botryoidal cryptocrystalline crust"]; size authority={"extent_kind":"individual","cap_cm":100,"record_cm":50}; CDR=null.
  - Habit crystal 39: barite; cockscomb; extent=individual; forms=["cyclic twin crests","cockscomb"]; size authority={"extent_kind":"individual","cap_cm":60,"record_cm":30}; CDR=null.
  - Habit crystal 40: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 41: chalcedony; botryoidal_chalcedony; extent=individual; forms=["radiating fibrous spherulites","botryoidal cryptocrystalline crust"]; size authority={"extent_kind":"individual","cap_cm":100,"record_cm":50}; CDR=null.
  - Habit crystal 42: pharmacolite; radiating_stellate; extent=individual; forms=["radiating acicular needles","stellate aggregate","starburst of white needles"]; size authority={"extent_kind":"individual","cap_cm":2,"record_cm":1}; CDR=null.
  - Habit crystal 43: chalcedony; botryoidal_chalcedony; extent=individual; forms=["radiating fibrous spherulites","botryoidal cryptocrystalline crust"]; size authority={"extent_kind":"individual","cap_cm":100,"record_cm":50}; CDR=null.

## Scenario notes (author's own rationale)
> Anchor + mechanism: Kissin 1992 (Canadian Mineralogist 30) defines the five-element class; Burisch et al. 2017 (Geology 45) ties the native-metal stage to methane/hydrocarbon influx — fluid inclusions in Schwarzwald five-element veins carry CH4 exactly at the dendrite stage, and the reduction is fast (hours-to-days), which is WHY the metals dendrite. Scharrer, Kreissl & Markl 2019 (Ore Geology Reviews) survey the assemblage diversity; Staude et al. 2012 (Mineralium Deposita 47) give the Schwarzwald basement-brine fluid-inclusion record (20–26 wt% NaCl, 150–340°C) this broth is anchored on.

> The redox shock is a DECLARED fluid.Eh movement (event-subsumption discipline, v185/v186): base −20 mV (mildly reducing basement brine), ONE deep pulse (amp −320) at u=0.58 (the CH4 influx; width ~8 steps; measured floor ~−253 mV at seed 42), and a late oxidizing trend (+95 ease — meteoric tail, tuned DOWN from +140 which dissolved the arsenide suite; a stronger late-oxidation finger was tried and reverted for the same reason — barite/erythrite are the documented aspirational casualties of arsenide survival). The wittichen_hydrocarbon_influx event at the pulse center is NARRATIVE-ONLY (no fluid writes).

> Engine fit: this is the morphology registry's dendrite-band tenant (MORPH_TH.native_bismuth, SIM 188 — RESEARCH-bismuth-morphology-2026-06-12.md). At the shock, Bi σ ≈ bi_f 3.0 × s_mask 0.96 × red_f 1.5 × T_f 1.0 ≈ 4.3 — the dendritic band (≥3.8) of a scale structurally capped at ~4.5. Pre-shock cooling-stage Bi sits in the feathery bands; post-shock regrowth heals feathery over the dendrites, so the zone stack RECORDS the shock (the narrator's healed-over paragraph + the bismuth_morph strip chip slamming 0→4 on the pulse). Skutterudite + safflorite get their FIRST scenario home here (both were expects-orphans fleet-wide).

> Wallrock: 'pegmatite' composition as the granite proxy (inert silicate — Wittichen veins cut Triberg granite; the carbonate gangue arrives in the FLUID via the late CO3 event, not from wall dissolution). Architecture tabular (vein-bounded), pocket size class, shape_seed 1736 (the cobalt-boom decade).

> Calibration target: the hand specimen is silver-white dendritic Bi embedded in white carbonate with gray arsenide rims, read in cross-section. The valence-correct SIM 268 audit preserves the native-metal and arsenide assemblage but retires the old acanthite/proustite scorecard: the late pulse is explicitly sulfate, not reduced sulfur, so it grows barite without inventing a silver-sulfide reaction. Acanthite and proustite remain documented possibilities pending an independently sourced sulfide pathway. Bi band edges remain pinned against the measured morphology trajectory (js/45 — the activity correction at salinity 24 compresses the structural ~4.5 ceiling to ~2.4 measured).

> BARITE DELIVERED (v191, gate-census tune): the v189 'aspirational barite' diagnosis was WRONG about the mechanism — the gate census (tools/wittichen-sulfate-probe.mjs) measured every gate component PASSING from step ~133 (Ba✓ S✓ redox✓ pH✓ T✓) with σ plateaued at 0.60: barite never needed more OXIDATION, it needed more BARIUM (ba_f 24/30 × s_f 30/40 × the salinity-24 activity penalty ≈ 0.59 pinned σ under 1 forever). The locality is the authority: Wittichen's veins are literally Barytgänge — barite-gangue veins, the district's defining gangue — so Ba 24 was unjustifiably shy. Ba 75 (still modest for a heavy-spar district) puts the barite stage at σ 1.47–1.55 from the meteoric beat on: barite 2/6/3 crystals at seeds 42/43/44, NO witherite (the BaCO3 competitor never gates), and the living suite intact at all probed seeds. No Eh change — the reverted +100 oxidation finger stays reverted.

> WEATHERING EPILOGUE EXECUTED: step 170 is a new post-vein boundary, not a retuned hydrothermal tail. T falls to 25°C, pressure to 0.001 kbar, the water table to 2 mm, and the buried-stage thermal-pulse generator stops. The 3-D vadose boundary raises O2 only above that surface and preserves total dissolved sulfur. Erythrite cannot nucleate until a same-site Co arsenide has actually dissolved and returned both Co and As through the accepted-shell LIFO budget. Sophia Mine occurrence evidence supports the erythrite bloom; Staude et al. 2012 supports the district's final supergene arsenate/carbonate/sulfate stage but is not misquoted as naming erythrite.

> COBALT ARAGONITE EXECUTED WITH AN EVIDENCE DOMAIN: Barber et al. 1975 measured calcite poisoning from 5e-4 M Co at 25°C and mostly aragonite by 3e-3 M; González-López et al. 2018 constrains the Co/Ca pathway, and Brazier & Mavromatis 2022 supplies equilibrium DCo≈0.1 at 25°C. The selector is unavailable during the 150–340°C vein stage and above the 1e-2 M amorphous-only limit. Accepted pink aragonite shells debit their trace Co and attach only to a weathering Co-arsenide that has returned booked Co. Wittichen occurrence is locality evidence; no direct observed substrate texture is attributed to Staude et al.
